@@ -2,6 +2,7 @@ Xfce 4.6.2
 ----------
 
   * Add Catalan and Galician translations of the manual.
+  * Fix inability to delete broken symlinks on the desktop.
 
 
 Xfce 4.6.1
